# llmkit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  LICENSE  README.md  docker-compose.yml  eval_runs.md  install.sh  landing.html  merge_summary.md  phased_merge.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.deps  Dockerfile.fast  EVAL_ROUNDS_FEATURE_SUMMARY.md  FALLBACK_README.md  README.md  curls  docker-entrypoint.sh  llmkit.db  llmkit.db-shm  llmkit.db-wal  openapi.yaml  todo.md
backend/.sqlx/: query-0000e18aa839587e7809667f29e144f5948607391e9ffea72006234a2c1c6cf3.json  query-01e9a276cd2dbfff40242e637f5b2921d1de88e2a03b99c8475c0dbead6f90ea.json  query-02f604f424d6180e9e828ab9b21d8293c4a7acb1ff9aa3b160682d865f0d5132.json  query-05b0972e01f17dc39905ea8bf14fc7073a6af84218b58470f24dd55c44b1faf7.json  query-0722fce8ff06562fdba858caaa6e4ccd4ea12af93843b0055b08eaf86adb5162.json  query-0846db1d73228b40b879ceb10af386dc22a5230c3836ce54239be239d6e9fb66.json  query-08548263f87d93ec083d714cac27a305ad4051bab47d3ba59d87b42bdf7e268b.json  query-0996ad5e73610ff1e5f573bc7ba544352b45e711b99d0b6889cb6e52eb595d16.json  query-0a876fba0336b8c8c37b82822eacda06139c037c1ef3aaf8e589188da1b1c4f6.json  query-0a92b014fcca355624f89bae2cdac277bb56b9a59b6f833505216c233513f777.json  query-0d2fe1ac09a83f944bd6b1d6a752c522d757273092861bce1b31229a81d137ab.json  query-103105e0ad9e37e54efe9c44e7dc55390e6d618b74af20dadf4ea7df45ee1e97.json  query-106483fdc645f46d7139f3fbeda032a342401bc33679f0bf763e4cc64c0e5f1f.json  query-1096a288d6461033ae656ae65733ea8bda65f560f69f46cc07effadbee5da719.json  query-1283ee9625417e5d2b2e297140a8cc1429aadc7c19a717c5c666dcc92c58dbfd.json  query-12b2923e38fb4d50882e1e69ec520af614fe9e0ce02e1a8b6d81f5c53fd01977.json  query-12f2c3544ff2c84464aee7ee1905c44add23632468999f552019abf97412ee3a.json  query-13592fe1ef75b0c937bcc5dc39b92599ee01e175b6d2f5c5c2f9bcf45f24a30e.json  query-14b02a554b9d535be7f112b8a9e93a6df2f0e8511d86d1b4ecaa5ac99e331949.json  query-18765f65f74fbd8f4174e7ce050e5a9742876ba44f16a9aa8330edcffa9bf667.json  query-198932d0dcfed2711864590428153d2899ad23a3fb01a1b8a0b0c5dcb2469a93.json  query-1a5ba202edb9db6a00d30db49c5cc024c8502e93b3217c3ab283fb4c1e7d45dc.json  query-1b8fa653d13ca7caf3b2ef98f32a3eeb07e9cf4a34993f45744b399fe2a70391.json  query-1c6656cfbac8a4e20d4a5b3f8ce5f5dec2ff60607277ee5d0b1345954207a682.json  query-1d73b7f2b1f8ab3c7412cf1c5555da693a86208ffec549698317dbcb17854b99.json  query-1dc8eb07c8d07c8a5d074684cc2235c31931218b909345d41e0a126fac130573.json  query-1eb2fcc1f90ff1714feaa5bac1f9af53531131ae7256c00f70b1bce36f9e7669.json  query-1fe21e16ea8694dd2d4950536dc713002999f75a229271ad61a3528e57a13366.json  (+130 more)
backend/src/: main.rs
(+222 files in other folders)
