[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
dotenv = "0.15.0"
moka = { version = "0.12.8", features = ["future"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
