[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
axum =  { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
chrono = "0.4.39"
diff = "0.1.13"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = "1.6.0"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.13.2"

