[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
async-stream = "0.3.6"
axum =  { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
chrono = "0.4.39"
diff = "0.1.13"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = "1.6.0"
jsonschema = "0.29.0"
jsonwebtoken = "9.3.1"
moka = { version = "0.12.8", features = ["future"] }
# openrouter_api = "0.1.3"
# openrouter_api = { path="../../openrouter_api" }
openrouter_api = { git="https://github.com/danwritecode/openrouter_api" }
os_pipe = "1.1.4"
password-hash = "0.5.0"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3.0"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.13.2"

[[bin]]
name = "llmkit"
path = "src/bin/llmkit.rs"
